# bookie

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  bunfig.toml  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: index.html  operations.md
docs/compliance/: gobd.md
scripts/: install-git-hooks.sh  test-all.sh
src/: app.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  inventory.json  over_permissive.json
src-tauri/migrations/0015/: 01_money_cents_columns.sql
src-tauri/migrations/0015_down/: 01_money_cents_columns.sql
src-tauri/migrations/0016/: 01_invoice_number_per_company.sql
src-tauri/migrations/0016_down/: 01_invoice_number_per_company.sql
src-tauri/migrations/0017/: 01_invoice_audit.sql
src-tauri/migrations/0017_down/: 01_invoice_audit.sql
src-tauri/migrations/0018/: 01_auto_backup_status.sql  01_invoice_immutability_triggers.sql
src-tauri/migrations/0018_down/: 01_auto_backup_status.sql  01_invoice_immutability_triggers.sql
src-tauri/migrations/0019/: 01_invoice_audit_triggers.sql
src-tauri/migrations/0019_down/: 01_invoice_audit_triggers.sql
src-tauri/migrations/0020/: 01_invoice_immutability.sql
src-tauri/migrations/0020_down/: 01_invoice_immutability.sql
src-tauri/migrations/0021/: 01_storno_columns.sql
src-tauri/migrations/0021_down/: 01_storno_columns.sql
src-tauri/migrations/0022/: 01_drop_legacy_money_columns.sql  01_incoming_invoices_local_path.sql
src-tauri/migrations/0022_down/: 01_drop_legacy_money_columns.sql  01_incoming_invoices_local_path.sql
src-tauri/migrations/0023/: .noop_down  01_drop_incoming_invoices_file_data.sql  01_drop_legacy_real_money_columns.sql
src-tauri/migrations/0023_down/: 01_drop_incoming_invoices_file_data.sql  01_recreate_legacy_real_money_columns.sql
src-tauri/migrations/0024/: 01_einvoice_format.sql
src-tauri/migrations/0024_down/: 01_einvoice_format.sql
src-tauri/migrations/0025/: .noop_down  01_drop_legacy_real_money_columns.sql
src-tauri/migrations/0025_down/: 01_drop_legacy_real_money_columns.sql  01_recreate_legacy_real_money_columns.sql
src-tauri/migrations/0026/: .noop_down  01_invoice_audit_immutable.sql
src-tauri/migrations/0026_down/: 01_invoice_audit_immutable.sql  README.md
src-tauri/src/: gobd.rs  lib.rs
src-tauri/tests/: boot_check.rs  drop_legacy_real_money_columns.rs  invoice_audit_diff.rs  invoice_number_uniqueness.rs  lifecycle_e2e.rs  lifecycle_e2e_v2.rs  migration_round_trip.rs  migrations.rs  minio_fixture_smoke.rs  restore_integration.rs  restore_integration_v3.rs  schema_version_boot.rs  schema_version_check.rs
src-tauri/tests/fixtures/: minio.rs  mod.rs
src/common/: CommandPalette.svelte  DateInput.svelte  DateTimeInput.svelte  DisplayField.svelte  FileUpload.svelte  InvoiceForm.svelte  MigrationOutOfDateDialog.svelte  Select.svelte  TextInput.svelte  Toaster.svelte
src/lib/: logger.ts  pager.ts  validation.ts
src/lib/boot/: recovery-actions.ts  schema-check.ts
src/lib/csv/: csv-writer.ts  euer-csv.ts  ustva-csv.ts
src/lib/db/: audit.ts  backfill-file-data.ts  connection.ts  dashboard.ts  dsgvo_erasure.ts  dsgvo_export.ts  incoming-invoices.ts  index.ts  invoice-items.ts  invoices.ts  payments.ts  retention.ts  settings.ts  tax-reports.ts  time-entries.ts  types.ts
src/lib/diagnostics/: BootDiagnostics.svelte  boot.ts
src/lib/i18n/: de.ts  en.ts
src/lib/legal/: types.ts
src/lib/legal/profiles/: at.ts  ch.ts  de.ts  fr.ts  nl.ts  us.ts
src/lib/pdf/: invoice-pdf-a3.ts  invoice-pdf-writer.ts  invoice-pdf.ts  invoice-xml.ts
src/lib/s3/: auto-backup.ts  client.ts
src/lib/shared/: errors.ts  money.ts
src/lib/ui/: command.svelte.ts  theme.svelte.ts  toasts.svelte.ts
src/routes/: +layout.svelte
src/routes/eingehende-rechnungen/: +page.svelte
src/routes/einstellungen/: +layout.svelte  +page.svelte
src/routes/einstellungen/backup/: +page.svelte
src/routes/einstellungen/diagnose/: +page.svelte
src/routes/einstellungen/organisation/: +page.svelte
src/routes/einstellungen/s3/: +page.svelte
src/routes/projekte/: +page.svelte
src/routes/rechnungen/: +page.svelte
src/routes/rechnungen/[id]/: +page.svelte
src/routes/rechnungen/neu/: +page.svelte
src/routes/uebersicht/: +page.svelte
src/routes/unternehmen/: +page.svelte
src/routes/zeiterfassung/: +page.svelte
src/routes/zeiterfassung/stundenzettel/: +page.svelte
tests/: README.md  single-instance.test.ts
tests/capabilities/: inventory.test.ts  least-privilege.test.ts  over-permissive.test.ts
tests/db/: auto-backup-status.test.ts  backfill-file-data.test.ts  companies.test.ts  cross-flow.test.ts  customers.test.ts  dashboard.test.ts  dsgvo_erasure.test.ts  dsgvo_flows.test.ts  harness.test.ts  harness.ts  incoming-invoices.test.ts  invoice-audit-immutability.test.ts  invoice-audit-immutable-roundtrip.test.ts  invoice-cents-regression.test.ts  invoices-cancel.test.ts  invoices-immutability.test.ts  invoices.pagination.test.ts  invoices.test.ts  payments.test.ts  projects.test.ts  retention.test.ts  settings.test.ts  setup.ts  time-entries.test.ts
tests/lib/: a11y-labels.test.ts  logger.forward.test.ts  logger.redact.test.ts  validation.test.ts
tests/lib/boot/: recovery-actions.test.ts  schema-check.test.ts
tests/lib/db/: connection.safefields.test.ts  dsgvo_erasure.test.ts  dsgvo_export.test.ts
tests/lib/diagnostics/: boot.test.ts
tests/lib/pdf/: einvoice-validator.test.ts  invoice-pdf-a3.test.ts  invoice-xml.test.ts
tests/lib/s3/: auto-backup.classify.test.ts
tests/lib/shared/: errors.test.ts
tests/s3/: docker-compose.yml
