[package]
name = "bookie"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ranel Karimov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bookie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-credential-types = "1"
tokio = { version = "1", default-features = false, features = ["time", "macros", "rt"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
keyring = "4"
keyring-core = "1"
sha2 = "0.10"
url = "2"
# E2E-only: ephemeral MinIO container fixture for end-to-end S3 round-trip
# tests (TEST-3.a). Declared here (not in [dev-dependencies]) because Cargo
# does not allow dev-dependencies to be `optional`. Pulled in only when the
# `e2e` feature is enabled, so a default `cargo build` / `cargo test` does
# not try to compile or invoke Docker. The crates have no runtime effect on
# the shipped binary because they're behind `#[cfg(feature = "e2e")]` in the
# integration tests under `tests/` and never referenced from `src/`.
testcontainers = { version = "0.27", optional = true }
testcontainers-modules = { version = "0.15", features = ["minio"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Used by tests/migrations.rs (TEST-2.a) to run each migration against a
# fresh in-memory SQLite DB and assert the down migration restores the
# pre-up schema. `bundled` keeps the test self-contained (no system
# libsqlite3 required) and matches the libsqlite3-sys version already in
# the lockfile via tauri-plugin-sql -> sqlx-sqlite.
rusqlite = { version = "0.32", features = ["bundled"] }
# Used by the REL-2.c retry-helper unit test to construct a stubbed
# `SdkError::ServiceError` carrying a synthetic HTTP 503 response. Both
# crates are already in the dependency graph via `aws-sdk-s3`; declaring
# them here only makes their public types nameable from test code.
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"

[features]
# E2E test feature: enables Docker-backed fixtures (e.g. MinIO) used by
# integration tests under `src-tauri/tests/`. Off by default so plain
# `cargo test` works without a Docker daemon.
e2e = ["dep:testcontainers", "dep:testcontainers-modules"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link time optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
