[package]
name = "bookie"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ranel Karimov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bookie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
# REL-4.a: enforce single-instance lock at process start. Bookie's SQLite-WAL
# data dir cannot be shared by two concurrent processes (see
# `docs/operations.md` §5.3) — this plugin's callback (wired in REL-4.b) will
# focus the existing window and exit the second launcher instead of letting
# both instances open the same `bookie.db`.
tauri-plugin-single-instance = "2"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-credential-types = "1"
tokio = { version = "1", default-features = false, features = ["time", "macros", "rt"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
keyring = "4"
keyring-core = "1"
sha2 = "0.10"
url = "2"
# COMP-1.b: GoBD-Export ZIP generator. `zip` is used to build the export
# archive (per-table CSV + manifest + signature) in `export_gobd`.
# `default-features = false` keeps the dependency lean (no bzip2/zstd
# encryption backends — `deflate` via `flate2` is sufficient for CSV
# payloads).
zip = { version = "8", default-features = false, features = ["deflate"] }
# Read-only access to the bundled SQLite DB. Two callers share this dep:
#   * COMP-1.b GoBD-Export — opens a fresh read-only connection from the
#     on-disk file because the tauri-plugin-sql infrastructure (sqlx) is
#     async-only and not safe to call while the live DB pool may also be
#     held.
#   * OBS-3.a schema_version_check — side connection to the same SQLite
#     file the tauri-plugin-sql pool manages, used to verify
#     `_sqlx_migrations.max(version) == EXPECTED_SCHEMA_VERSION` before
#     exposing business commands.
# `bundled` matches the libsqlite3-sys version already pulled in by
# sqlx-sqlite via tauri-plugin-sql, so this does not introduce a second
# native sqlite library.
rusqlite = { version = "0.32", features = ["bundled"] }
# E2E-only: ephemeral MinIO container fixture for end-to-end S3 round-trip
# tests (TEST-3.a). Declared here (not in [dev-dependencies]) because Cargo
# does not allow dev-dependencies to be `optional`. Pulled in only when the
# `e2e` feature is enabled, so a default `cargo build` / `cargo test` does
# not try to compile or invoke Docker. The crates have no runtime effect on
# the shipped binary because they're behind `#[cfg(feature = "e2e")]` in the
# integration tests under `tests/` and never referenced from `src/`.
testcontainers = { version = "0.27", optional = true }
testcontainers-modules = { version = "0.15", features = ["minio"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# `rusqlite` is also a regular runtime dependency (see [dependencies] above)
# for the COMP-1.b GoBD-Export path and the OBS-3.a schema_version_check.
# tests/migrations.rs (TEST-2.a) drives each migration against a fresh
# in-memory SQLite DB and tests/restore_integration.rs (REL-1.d) and
# tests/schema_version_check.rs (OBS-3.a) probe on-disk fixtures using the
# same crate; declaring it once at the [dependencies] level is sufficient
# and avoids the duplicate-feature warning.

[features]
# E2E test feature: enables Docker-backed fixtures (e.g. MinIO) used by
# integration tests under `src-tauri/tests/`. Off by default so plain
# `cargo test` works without a Docker daemon.
e2e = ["dep:testcontainers", "dep:testcontainers-modules"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link time optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
